--- a/mobileapp/mobileapp/Views/Dashboard.xaml
+++ b/mobileapp/mobileapp/Views/Dashboard.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="mobileapp.Views.ForgotPassword" Title="{Binding Title}">
-  
+             x:Class="mobileapp.Views.Dashboard" Title="{Binding Title}">
+    <ContentPage.Content>
+        <StackLayout></StackLayout>
+    </ContentPage.Content>
 </ContentPage>
