--- a/mobileapp/mobileapp/Views/Login.xaml
+++ b/mobileapp/mobileapp/Views/Login.xaml
@@ -11,7 +11,8 @@
             <Image Source="bidontask.png" Margin="0, 50"></Image>
             <Entry Placeholder="Username" HorizontalTextAlignment="Center"></Entry>
             <Entry Placeholder="Password" IsPassword="True" HorizontalTextAlignment="Center"></Entry>
-            <Button Text="Sign in" HorizontalOptions="Center" WidthRequest="100" BackgroundColor="{Binding DarkPrimaryColor}"></Button>
+            <Button Text="Sign in" HorizontalOptions="Center" WidthRequest="100" BackgroundColor="{Binding DarkPrimaryColor}"
+                    Command="{Binding SignInCommand}"></Button>
             <StackLayout Orientation="Horizontal" Margin="0, 50" Padding="10">
                 <controls:HyperLinkLabel NavigateCommand="{Binding GotoForgotPasswordCommand}" 
                                          Text="Forgot passoword?"
