--- a/mobileapp/mobileapp/Views/Dashboard.xaml
+++ b/mobileapp/mobileapp/Views/Dashboard.xaml
@@ -2,9 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
+             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="mobileapp.Views.Dashboard" Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout></StackLayout>
+        <StackLayout VerticalOptions="StartAndExpand" Padding="30">
+            <!--<maps:Map WidthRequest="320" HeightRequest="200"
+            x:Name="MyMap"
+            IsShowingUser="true"
+            MapType="Hybrid"
+        />-->
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
