--- a/mobileapp/mobileapp/Views/RegisterUserSetPassword.xaml
+++ b/mobileapp/mobileapp/Views/RegisterUserSetPassword.xaml
@@ -5,7 +5,7 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="mobileapp.Views.RegisterUserSetPassword" Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Padding="10">
             <StackLayout Margin="10, 30">
                 <Label HorizontalTextAlignment="Center" FontSize="Large">Thank you for registering with Bid-On-Task</Label>
                 <Label HorizontalTextAlignment="Center">Let's secure the account</Label>
@@ -24,7 +24,7 @@
                 </StackLayout>
             </ScrollView>
             <StackLayout Orientation="Horizontal" VerticalOptions="End">
-                <Button Text="Skip and continue" HorizontalOptions="FillAndExpand"
+                <Button Text="Skip and continue" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding DividerColor}"
                         Command="{Binding GotoNextPageCommand}"></Button>
                 <Button Text="Save and Next" HorizontalOptions="FillAndExpand"
                         Command="{Binding GotoSaveCommand}"
