--- a/mobileapp/mobileapp/Views/RegisterUserConfirmMobile.xaml
+++ b/mobileapp/mobileapp/Views/RegisterUserConfirmMobile.xaml
@@ -5,7 +5,7 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="mobileapp.Views.RegisterUserConfirmMobile" Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Padding="10">
             <StackLayout VerticalOptions="FillAndExpand">
                 <StackLayout Margin="10, 30">
                     <Label HorizontalTextAlignment="Center" FontSize="Large">Verify Mobile</Label>
@@ -24,7 +24,7 @@
             </StackLayout>
             <StackLayout VerticalOptions="End">
                 <StackLayout Orientation="Horizontal">
-                    <Button Text="Skip Verification" HorizontalOptions="FillAndExpand"></Button>
+                    <Button Text="Skip Verification" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding DividerColor}"></Button>
                     <Button Text="Next" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding DarkPrimaryColor}"
                             Command="{Binding GotoSetProfilePictureCommand}"></Button>
                 </StackLayout>
