--- a/mobileapp/mobileapp/App.xaml
+++ b/mobileapp/mobileapp/App.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <prism:PrismApplication xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:prism="clr-namespace:Prism.Autofac;assembly=Prism.Autofac.Forms"
+             xmlns:prism="clr-namespace:Prism.Autofac;assembly=Prism.Autofac.Forms"             
              x:Class="mobileapp.App">
 	<Application.Resources>
 
@@ -9,7 +9,12 @@
             <OnPlatform x:TypeArguments="x:String" x:Key="material">
                 <On Platform="Android" Value="iconize-material.ttf#Open Sans" />                                
             </OnPlatform>
-            
+            <Color x:Key="DividerColor">#757575</Color>
+            <Color x:Key="AccentColor">#7C4DFF</Color>
+            <Color x:Key="PrimaryTextColor">#212121</Color>
+            <Color x:Key="SecondaryTextColor">#757575</Color>
+            <Color x:Key="LightPrimaryColor">#B2DFDB</Color>
+            <Color x:Key="DarkPrimaryColor">#00796B</Color>
         </ResourceDictionary>
 
     </Application.Resources>
